--- a/composer.json
+++ b/composer.json
@@ -15,5 +15,15 @@
     "suggest": {
         "probots-io/pinecone-php": "^1.0",
         "symfony/process": "^4.0|^5.0|^6.0|^7.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "NeuronAI\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "NeuronAI\\Tests\\": "tests/"
+        }
     }
 }
