--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,17 @@
         }
     ],
     "require": {
-        "php": "^7.4|^8.0",
-        "guzzlehttp/guzzle": "^7.0"
+        "php": "^8.0",
+        "guzzlehttp/guzzle": "^7.0",
+        "psr/log": "^1.0|^2.0|^3.0"
     },
     "suggest": {
+        "inspector-apm/inspector-php": "^3.9",
         "probots-io/pinecone-php": "^1.0",
         "symfony/process": "^4.0|^5.0|^6.0|^7.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.0"
     },
     "autoload": {
         "psr-4": {
