--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "symfony/process": "^4.0|^5.0|^6.0|^7.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.0"
+        "phpunit/phpunit": "^9.0",
+        "symfony/process": "^4.0|^5.0|^6.0|^7.0"
     },
     "autoload": {
         "psr-4": {
