--- a/composer.json
+++ b/composer.json
@@ -15,11 +15,13 @@
         "psr/log": "^1.0|^2.0|^3.0"
     },
     "suggest": {
+        "elasticsearch/elasticsearch": "^7.0|^8.0",
         "inspector-apm/inspector-php": "^3.9",
         "probots-io/pinecone-php": "^1.0",
         "symfony/process": "^4.0|^5.0|^6.0|^7.0"
     },
     "require-dev": {
+        "elasticsearch/elasticsearch": "^7.0|^8.0",
         "phpunit/phpunit": "^9.0",
         "symfony/process": "^4.0|^5.0|^6.0|^7.0"
     },
@@ -31,6 +33,11 @@
     "autoload-dev": {
         "psr-4": {
             "NeuronAI\\Tests\\": "tests/"
+        }
+    },
+    "config": {
+        "allow-plugins": {
+            "php-http/discovery": true
         }
     }
 }
