--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "inspector-apm/agentic",
+    "name": "inspector-apm/neuron-ai",
     "description": "PHP AI Framework with built-in observability.",
     "minimum-stability": "stable",
     "license": "MIT",
