--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "require": {
         "php": "^8.0",
         "guzzlehttp/guzzle": "^7.0",
-        "psr/log": "^1.0|^2.0|^3.0"
+        "psr/log": "^1.0|^2.0|^3.0",
+        "psr/http-message": "^1.0|^2.0"
     },
     "suggest": {
         "elasticsearch/elasticsearch": "^7.0|^8.0",
