--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -43,6 +43,7 @@ jobs:
               uses: jirevwe/typesense-github-action@v1.0.1
               with: 
                   typesense-port: 8108
+                  typesense-api-key: "xyz"
 
             - name: Curl Typesense
               run: sleep 10 && curl http://localhost:8108/health
