--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,6 +17,10 @@ jobs:
 
         name: PHP ${{ matrix.php }} - ${{ matrix.os }} - ${{ matrix.dependency-version }}
 
+        services:
+          typesense:
+            image: typesense/typesense:28.0
+
         steps:
 
             - name: Checkout
