--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -54,6 +54,25 @@ jobs:
                   --data-dir /data \
                   --enable-cors
 
+            - name: Wait for Typesense to be healthy
+              shell: bash
+              run: |
+                  start_time=$(date +%s)
+                  timeout=30
+                  counter=0
+                  until curl -s http://localhost:8108/health | grep -q '"ok":true'; do
+                    if [ $counter -eq $timeout ]; then
+                      echo "Timed out waiting for Typesense to be healthy"
+                      exit 1
+                    fi
+                    echo "Waiting for Typesense to be healthy..."
+                    sleep 1
+                    counter=$((counter + 1))
+                  done
+                  end_time=$(date +%s)
+                  elapsed=$((end_time - start_time))
+                  echo "Typesense healthcheck elapsed: ${elapsed}s"
+
             - name: Curl Typesense
               run: sleep 1 && curl http://localhost:8108/health
 
