--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -45,13 +45,18 @@ jobs:
 
             - name: Install Typesense Database
               run: |
-                  docker run -d \
-                  -p 8108 \
+                  docker run -id \
+                  -p 8108:8108 \
                   --name typesense \
-                  -v /tmp/typesense:/data \
+                  -v /tmp/typesense-data:/data \
+                  -v /tmp/typesense-analytics-data:/analytics-data \
                   typesense/typesense:28.0 \
                   --api-key=xyz \
-                  --data-dir /data \
+                  --data-dir=/data \
+                  --enable-search-analytics=true \
+                  --analytics-dir=/analytics-data  \
+                  --analytics-flush-interval=60 \
+                  --analytics-minute-rate-limit=100 \
                   --enable-cors
 
             - name: Wait for Typesense to be healthy
