--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "php-http/curl-client": "^2.3"
     },
     "require-dev": {
-        "elasticsearch/elasticsearch": "^7.0|^8.0",
+        "elasticsearch/elasticsearch": "^8.0",
         "phpunit/phpunit": "^9.0",
         "symfony/process": "^4.0|^5.0|^6.0|^7.0",
         "typesense/typesense-php": "^5.0",
