--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     "require-dev": {
         "elasticsearch/elasticsearch": "^8.0",
         "phpunit/phpunit": "^9.0",
-        "symfony/process": "^4.0|^5.0|^6.0|^7.0",
+        "symfony/process": "^5.0|^6.0|^7.0",
         "typesense/typesense-php": "^5.0",
         "php-http/curl-client": "^2.3"
     },
