--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
         "guzzlehttp/guzzle": "^7.0",
         "psr/log": "^1.0|^2.0|^3.0",
         "psr/http-message": "^1.0|^2.0",
-        "symfony/property-info": "^6.4 || ^7.0"
+        "symfony/property-info": "^6.4 || ^7.0",
+        "symfony/serializer": "^6.4 || ^7.0",
+        "symfony/validator": "^6.4 || ^7.0"
     },
     "suggest": {
         "elasticsearch/elasticsearch": "^7.0|^8.0",
@@ -28,7 +30,6 @@
         "inspector-apm/inspector-php": "^3.9",
         "phpunit/phpunit": "^9.0",
         "symfony/process": "^5.0|^6.0|^7.0",
-        "symfony/property-info": "^6.4 || ^7.0",
         "typesense/typesense-php": "^5.0",
         "php-http/curl-client": "^2.3"
     },
