--- a/composer.json
+++ b/composer.json
@@ -10,14 +10,13 @@
         }
     ],
     "require": {
-        "php": "^8.0",
+        "php": "^8.1",
         "guzzlehttp/guzzle": "^7.0",
         "psr/log": "^1.0|^2.0|^3.0",
         "psr/http-message": "^1.0|^2.0",
         "symfony/property-info": "^6.4 || ^7.0",
         "symfony/serializer": "^6.4 || ^7.0",
-        "symfony/validator": "^6.4 || ^7.0",
-        "spiral/json-schema-generator": "^1.1"
+        "symfony/validator": "^6.4 || ^7.0"
     },
     "suggest": {
         "elasticsearch/elasticsearch": "^7.0|^8.0",
