--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
         "psr/http-message": "^1.0|^2.0",
         "symfony/property-info": "^6.4 || ^7.0",
         "symfony/serializer": "^6.4 || ^7.0",
-        "symfony/validator": "^6.4 || ^7.0"
+        "symfony/validator": "^6.4 || ^7.0",
+        "symfony/property-access": "^7.2",
+        "phpdocumentor/reflection-docblock": "^5.6"
     },
     "suggest": {
         "elasticsearch/elasticsearch": "^7.0|^8.0",
