--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "symfony/property-info": "^6.4 || ^7.0",
         "symfony/serializer": "^6.4 || ^7.0",
         "symfony/validator": "^6.4 || ^7.0",
-        "symfony/property-access": "^7.2"
+        "symfony/property-access": "^6.4 || ^7.0",
+        "phpdocumentor/reflection-docblock": "^5.6"
     },
     "suggest": {
         "elasticsearch/elasticsearch": "^7.0|^8.0",
