--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,6 +9,20 @@ on:
 jobs:
     ci:
         runs-on: ${{ matrix.os }}
+        services:
+            mariadb:
+                image: mariadb:11
+                env:
+                    MYSQL_DATABASE: neuron_ai_test
+                    MYSQL_USER: root
+                    MYSQL_ALLOW_EMPTY_PASSWORD: yes
+                ports:
+                    - 3306:3306
+                options: >-
+                    --health-cmd="healthcheck.sh --connect --innodb_initialized"
+                    --health-interval=10s
+                    --health-timeout=5s
+                    --health-retries=3
         strategy:
             matrix:
                 os: [ubuntu-latest]
