--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,9 @@
         "phpunit/phpunit": "^9.0",
         "symfony/process": "^5.0|^6.0|^7.0",
         "typesense/typesense-php": "^5.0",
-        "php-http/curl-client": "^2.3"
+        "php-http/curl-client": "^2.3",
+        "symfony/cache": "^5.4 || ^6.4 || ^7.0",
+        "ext-pdo": "*"
     },
     "autoload": {
         "psr-4": {
