--- a/composer.json
+++ b/composer.json
@@ -18,15 +18,15 @@
         "symfony/serializer": "^5.4 || ^6.4 || ^7.0",
         "symfony/validator": "^5.4 || ^6.4 || ^7.0",
         "symfony/property-access": "^5.4 || ^6.4 || ^7.0",
-        "phpdocumentor/reflection-docblock": "^5.3 || ^5.6",
-        "doctrine/orm": "^2.20"
+        "phpdocumentor/reflection-docblock": "^5.3 || ^5.6"
     },
     "suggest": {
         "elasticsearch/elasticsearch": "^7.0|^8.0",
         "inspector-apm/inspector-php": "^3.9",
         "symfony/process": "^4.0|^5.0|^6.0|^7.0",
         "typesense/typesense-php": "^5.0",
-        "php-http/curl-client": "^2.3"
+        "php-http/curl-client": "^2.3",
+        "doctrine/orm": "^2.20"
     },
     "require-dev": {
         "elasticsearch/elasticsearch": "^8.0",
