--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "inspector-apm/inspector-php": "^3.9",
         "symfony/process": "^4.0|^5.0|^6.0|^7.0",
         "typesense/typesense-php": "^5.0",
-        "php-http/curl-client": "^2.3"
+        "php-http/curl-client": "^2.3",
+        "monolog/monolog": "^3.9"
     },
     "require-dev": {
         "elasticsearch/elasticsearch": "^8.0",
@@ -33,7 +34,8 @@
         "phpunit/phpunit": "^9.0",
         "symfony/process": "^5.0|^6.0|^7.0",
         "typesense/typesense-php": "^5.0",
-        "php-http/curl-client": "^2.3"
+        "php-http/curl-client": "^2.3",
+        "monolog/monolog": "^3.9"
     },
     "autoload": {
         "psr-4": {
