--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "inspector-apm/neuron-ai",
     "description": "PHP AI Framework with built-in observability.",
+    "type": "library",
     "minimum-stability": "stable",
     "license": "MIT",
     "authors": [
@@ -28,6 +29,7 @@
         "php-http/curl-client": "^2.3"
     },
     "require-dev": {
+        "composer/composer": "^2.0",
         "elasticsearch/elasticsearch": "^8.0",
         "inspector-apm/inspector-php": "^3.9",
         "phpunit/phpunit": "^9.0",
