--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     ],
     "require": {
         "php": "^8.1",
+        "composer-plugin-api": "^2.0",
         "guzzlehttp/guzzle": "^7.0",
         "psr/log": "^1.0|^2.0|^3.0",
         "psr/http-message": "^1.0|^2.0",
@@ -52,12 +53,7 @@
             "php-http/discovery": true
         }
     },
-    "scripts": {
-        "post-package-install": [
-            "NeuronAI\\Installer::postInstall"
-        ],
-        "post-package-update": [
-            "NeuronAI\\Installer::postUpdate"
-        ]
+    "extra": {
+        "class": "NeuronAI\\ComposerPlugin"
     }
 }
