php-cs-fixer refactor

--- a/composer.json
+++ b/composer.json
@@ -36,11 +36,15 @@
         "php-http/curl-client": "^2.3",
         "phpstan/phpstan": "^2.1",
         "tomasvotruba/type-coverage": "^2.0",
-        "rector/rector": "^2.0"
+        "rector/rector": "^2.0",
+        "friendsofphp/php-cs-fixer": "^3.75"
     },
     "scripts": {
         "analyse": [
             "./vendor/bin/phpstan analyse -v"
+        ],
+        "format": [
+            "php-cs-fixer fix"
         ],
         "test": [
             "vendor/bin/phpunit --colors=always"
