--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,8 @@
         "typesense/typesense-php": "^5.0",
         "php-http/curl-client": "^2.3",
         "symfony/cache": "^5.4 || ^6.4 || ^7.0",
-        "ext-pdo": "*"
+        "ext-pdo": "*",
+        "doctrine/orm": "^2.20"
     },
     "autoload": {
         "psr-4": {
