--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,8 @@
         "doctrine/orm": "^2.20",
         "tomasvotruba/type-coverage": "^2.0",
         "rector/rector": "^2.0",
-        "friendsofphp/php-cs-fixer": "^3.75"
+        "friendsofphp/php-cs-fixer": "^3.75",
+        "peckphp/peck": "^0.1.3"
     },
     "scripts": {
         "analyse": [
