--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,7 @@
     },
     "scripts": {
         "analyse": [
-            "vendor/bin/phpstan analyse -v"
+            "vendor/bin/phpstan analyse --memory-limit=1G -v"
         ],
         "format": [
             "php-cs-fixer fix"
