--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "symfony/serializer": "^5.4 || ^6.4 || ^7.0",
         "symfony/validator": "^5.4 || ^6.4 || ^7.0",
         "symfony/property-access": "^5.4 || ^6.4 || ^7.0",
-        "phpdocumentor/reflection-docblock": "^5.3 || ^5.6"
+        "phpdocumentor/reflection-docblock": "^5.3"
     },
     "suggest": {
         "elasticsearch/elasticsearch": "^7.0|^8.0",
