--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,7 +2,7 @@ name: Tests
 
 on:
     push:
-        branches: [ "main" ]
+        branches: [ "main","tac" ]
     pull_request:
         branches: [ "main" ]
 
