--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,19 +10,30 @@ jobs:
     ci:
         runs-on: ${{ matrix.os }}
         services:
-            mariadb:
-                image: mariadb:11
+            postgres:
+                image: postgres
                 env:
-                    MYSQL_DATABASE: neuron_ai_test
-                    MYSQL_USER: root
-                    MYSQL_ALLOW_EMPTY_PASSWORD: yes
+                    POSTGRES_PASSWORD: postgres
                 ports:
-                    - 3306:3306
+                    - 5432:5432
                 options: >-
-                    --health-cmd="healthcheck.sh --connect --innodb_initialized"
-                    --health-interval=10s
-                    --health-timeout=5s
-                    --health-retries=3
+                    --health-cmd pg_isready
+                    --health-interval 10s
+                    --health-timeout 5s
+                    --health-retries 5
+#            mariadb:
+#                image: mariadb:11
+#                env:
+#                    MYSQL_DATABASE: neuron_ai_test
+#                    MYSQL_USER: root
+#                    MYSQL_ALLOW_EMPTY_PASSWORD: yes
+#                ports:
+#                    - 3306:3306
+#                options: >-
+#                    --health-cmd="healthcheck.sh --connect --innodb_initialized"
+#                    --health-interval=10s
+#                    --health-timeout=5s
+#                    --health-retries=3
         strategy:
             matrix:
                 os: [ubuntu-latest]
