--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,7 +2,7 @@ name: Tests
 
 on:
     push:
-        branches: [ "main","tac" ]
+        branches: [ "main"]
     pull_request:
         branches: [ "main" ]
 
@@ -21,23 +21,10 @@ jobs:
                     --health-interval 10s
                     --health-timeout 5s
                     --health-retries 5
-#            mariadb:
-#                image: mariadb:11
-#                env:
-#                    MYSQL_DATABASE: neuron_ai_test
-#                    MYSQL_USER: root
-#                    MYSQL_ALLOW_EMPTY_PASSWORD: yes
-#                ports:
-#                    - 3306:3306
-#                options: >-
-#                    --health-cmd="healthcheck.sh --connect --innodb_initialized"
-#                    --health-interval=10s
-#                    --health-timeout=5s
-#                    --health-retries=3
         strategy:
             matrix:
                 os: [ubuntu-latest]
-                php: ['8.2', '8.3', '8.4']
+                php: ['8.1', '8.2', '8.3', '8.4']
                 dependency-version: [prefer-lowest, prefer-stable]
 
         name: PHP ${{ matrix.php }} - ${{ matrix.os }} - ${{ matrix.dependency-version }}
