--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,18 +9,18 @@ on:
 jobs:
     ci:
         runs-on: ${{ matrix.os }}
-        services:
-            postgres:
-                image: postgres
-                env:
-                    POSTGRES_PASSWORD: postgres
-                ports:
-                    - 5432:5432
-                options: >-
-                    --health-cmd pg_isready
-                    --health-interval 10s
-                    --health-timeout 5s
-                    --health-retries 5
+#        services:
+#            postgres:
+#                image: postgres
+#                env:
+#                    POSTGRES_PASSWORD: postgres
+#                ports:
+#                    - 5432:5432
+#                options: >-
+#                    --health-cmd pg_isready
+#                    --health-interval 10s
+#                    --health-timeout 5s
+#                    --health-retries 5
         strategy:
             matrix:
                 os: [ubuntu-latest]
@@ -30,7 +30,6 @@ jobs:
         name: PHP ${{ matrix.php }} - ${{ matrix.os }} - ${{ matrix.dependency-version }}
 
         steps:
-
             - name: Checkout
               uses: actions/checkout@v4
 
@@ -50,9 +49,6 @@ jobs:
               run: |
                   echo "::add-matcher::${{ runner.tool_cache }}/php.json"
                   echo "::add-matcher::${{ runner.tool_cache }}/phpunit.json"
-
-            - name: Install PHP dependencies
-              run: composer update --${{ matrix.dependency-version }} --no-interaction --no-progress --ansi
 
             - name: Configure sysctl limits (for elastic to boot)
               run: |
@@ -101,6 +97,23 @@ jobs:
                   end_time=$(date +%s)
                   elapsed=$((end_time - start_time))
                   echo "Typesense healthcheck elapsed: ${elapsed}s"
+
+            - name: Install Postgres with Vector extension
+              uses: cpunion/setup-pgvector@main
+              with:
+                postgres-version: '17'
+                postgres-user: 'postgres'
+                postgres-password: 'postgres'
+                postgres-db: 'neuron_ai_test'
+
+            - name: Test pgvector
+              env:
+                  PGPASSWORD: postgres
+              run: |
+                  psql -h localhost -U postgres -d neuron_ai_test -c 'CREATE EXTENSION vector;'
+
+            - name: Install PHP dependencies
+              run: composer update --${{ matrix.dependency-version }} --no-interaction --no-progress --ansi
 
             - name: Unit Tests
               run: vendor/bin/phpunit --colors=always --verbose
