--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -101,16 +101,20 @@ jobs:
             - name: Install Postgres with Vector extension
               uses: cpunion/setup-pgvector@main
               with:
-                postgres-version: '17'
-                postgres-user: 'postgres'
-                postgres-password: 'postgres'
-                postgres-db: 'neuron_ai_test'
+                  postgres-version: '17'
+                  pgvector-version: '0.8.0'
+                  postgres-user: 'postgres'
+                  postgres-password: 'postgres'
+                  postgres-db: 'neuron_ai_test'
 
-            - name: Test pgvector
-              env:
+            -  name: Test pgvector
+               env:
                   PGPASSWORD: postgres
-              run: |
+               run: |
                   psql -h localhost -U postgres -d neuron_ai_test -c 'CREATE EXTENSION vector;'
+#                  psql -h localhost -U postgres -d neuron_ai_test -c 'CREATE TABLE items (id bigserial PRIMARY KEY, embedding vector(3));'
+#                  psql -h localhost -U postgres -d neuron_ai_test -c "INSERT INTO items (embedding) VALUES ('[1,2,3]');"
+#                  psql -h localhost -U postgres -d neuron_ai_test -c 'SELECT * FROM items;'
 
             - name: Install PHP dependencies
               run: composer update --${{ matrix.dependency-version }} --no-interaction --no-progress --ansi
