--- a/.github/workflows/php-cs-fixer.yml
+++ b/.github/workflows/php-cs-fixer.yml
@@ -2,9 +2,11 @@ name: PHP CS Fixer
 
 on:
     push:
+        branches: ["main"]
         paths:
             - '**.php'
     pull_request:
+        branches: ["main"]
         paths:
             - '**.php'
 
