--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,6 @@
     "name": "inspector-apm/neuron-ai",
     "description": "PHP AI Framework with built-in observability.",
     "minimum-stability": "stable",
-    "license": "MIT",
     "authors": [
         {
             "name": "Valerio Barbera",
@@ -13,11 +12,11 @@
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.0",
         "psr/log": "^1.0|^2.0|^3.0",
-        "psr/http-message": "^1.0|^2.0"
+        "psr/http-message": "^1.0|^2.0",
+        "inspector-apm/inspector-php": "^3.15.5"
     },
     "suggest": {
         "elasticsearch/elasticsearch": "^7.0|^8.0",
-        "inspector-apm/inspector-php": "^3.9",
         "symfony/process": "^4.0|^5.0|^6.0|^7.0",
         "typesense/typesense-php": "^5.0",
         "php-http/curl-client": "^2.3",
@@ -25,7 +24,6 @@
     },
     "require-dev": {
         "elasticsearch/elasticsearch": "^8.0",
-        "inspector-apm/inspector-php": "dev-master",
         "phpunit/phpunit": "^9.0",
         "symfony/process": "^5.0|^6.0|^7.0",
         "typesense/typesense-php": "^5.0",
