--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -39,6 +39,14 @@ jobs:
                 username: ${{ vars.DOCKERHUB_USERNAME }}
                 password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+            -   name: Install poppler-utils (for pdftotext)
+                run: |
+                    sudo apt-get update
+                    sudo apt-get install -y poppler-utils
+
+            -   name: Verify pdftotext installation
+                run: pdftotext -v
+
             - name: Setup PHP
               uses: shivammathur/setup-php@v2
               with:
