--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "inspector-apm/inspector-php": "^3.15.5"
     },
     "suggest": {
+        "aws/aws-sdk-php": "^3.209",
         "elasticsearch/elasticsearch": "^7.0|^8.0",
         "symfony/process": "^4.0|^5.0|^6.0|^7.0",
         "typesense/typesense-php": "^5.0",
@@ -23,6 +24,7 @@
         "doctrine/orm": "^2.20"
     },
     "require-dev": {
+        "aws/aws-sdk-php": "^3.209",
         "elasticsearch/elasticsearch": "^8.0",
         "phpunit/phpunit": "^9.0",
         "symfony/process": "^5.0|^6.0|^7.0",
