--- a/composer.json
+++ b/composer.json
@@ -47,6 +47,9 @@
         "format": [
             "php-cs-fixer fix --allow-risky=yes"
         ],
+        "refactor": [
+            "vendor/bin/rector"
+        ],
         "test": [
             "vendor/bin/phpunit --colors=always"
         ]
