--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "inspector-apm/neuron-ai",
     "description": "PHP AI Framework with built-in observability.",
+    "minimum-stability": "stable",
     "authors": [
         {
             "name": "Valerio Barbera",
