--- a/composer.json
+++ b/composer.json
@@ -9,18 +9,12 @@
         }
     ],
     "license": "MIT",
-    "repositories": [
-        {
-            "type": "git",
-            "url": "https://github.com/inspector-apm/inspector-php"
-        }
-    ],
     "require": {
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.0",
         "psr/log": "^1.0|^2.0|^3.0",
         "psr/http-message": "^1.0|^2.0",
-        "inspector-apm/inspector-php": "dev-nested-segments"
+        "inspector-apm/inspector-php": "^3.15.9"
     },
     "suggest": {
         "aws/aws-sdk-php": "^3.209",
